# fake-asset-faucet

./: .gitignore  Cargo.toml  README.md  interaction.md
contracts/cw20-base/: Cargo.toml  README.md
contracts/cw20-base/src/: contract.rs
contracts/cw721-base/: Cargo.toml
contracts/cw721-base/src/: contract_tests.rs  execute.rs  helpers.rs  msg.rs  query.rs  state.rs
contracts/cw721-metadata-onchain/: Cargo.toml
contracts/cw721-metadata-onchain/src/: lib.rs
contracts/cw721-neon-peepz/: Cargo.toml
contracts/cw721-neon-peepz/examples/: schema.rs
contracts/cw721-neon-peepz/src/: lib.rs
contracts/cw721-shitty-kittyz/: Cargo.toml
contracts/cw721-shitty-kittyz/examples/: schema.rs
contracts/cw721-shitty-kittyz/src/: lib.rs
contracts/hub/: Cargo.toml  README.md
contracts/hub/examples/: schema.rs
contracts/hub/schema/: fake-asset-faucet-hub.json
contracts/hub/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
