[workspace]
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["Le Turt <89463679+LeTurt333@users.noreply.github.com>"]
edition = "2021"
publish = false
keywords = ["cosmwasm", "nft"]

[workspace.dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-schema = "1.1.0"
schemars = "0.8.10"
serde = {version = "1.0.140", default-features = false, features = ["derive"]}
cw-storage-plus = "0.15.1"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
