[package]
name = "cw721-neon-peepz"
description = "Cw721 onchain metadata with extension values for neon-peepz"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
schemars.workspace = true
serde.workspace = true
cw-storage-plus.workspace = true
cw2 = "0.15.0"
cw721 = "0.15.0" 
cw721-base = { path = "../cw721-base", features = [
  "library",
] }