[package]
name = "fake-asset-faucet-hub"
description = "Hub contract for testnet cs-tokens and nfts"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
schemars.workspace = true
serde.workspace = true
cw-storage-plus.workspace = true

cw-utils = "1.0.1"
cw2 = "1.0.1"
cw721 = "0.16.0" 
cw721-base = { path = "../cw721-base", features = [
  "library",
] }
cw721-neon-peepz = {path = "../cw721-neon-peepz", features = [
  "library",
] }
cw721-shitty-kittyz = {path ="../cw721-shitty-kittyz", features = [
  "library",
] }
thiserror = { version = "1.0.38" }
cw20 = "1.0.1"
cw20-base = {version = "1.0.1", features = ["library"]}
nois = "0.5.1"
serde_json = "1.0.91"
serde-cw-value = "0.7.0"
serde-json-wasm = "0.5.0"
